# magpie

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
scripts/: manage_positions.py  migrate_duckdb_to_sqlite.py  morning_scan.py  run_agent.py  run_api.py  sync_positions.py
skills/magpie/: skill.yaml
src/magpie/: __init__.py  config.py
src/magpie/agent/: api.py  loop.py
src/magpie/analysis/: __init__.py  feedback.py  llm.py  prompts.py  regime.py
src/magpie/cli/: __init__.py  app.py  display.py
src/magpie/cli/commands/: agent.py  analyze.py  journal.py  positions.py  report.py  rules.py  watchlist.py
src/magpie/dashboard/: app.py  data.py  payoff.py
src/magpie/dashboard/pages/: equity.py  greeks.py  journal.py  payoff_page.py  winrate.py
src/magpie/db/: __init__.py  connection.py  models.py
src/magpie/db/migrations/: 001_initial.sql  002_indexes.sql  003_trade_rationale.sql  004_market_regime_snapshots.sql  005_trading_rules.sql  006_current_underlying_price.sql  007_trading_notes.sql  (+1 more)
src/magpie/execution/: __init__.py  orders.py  review.py  risk.py
src/magpie/market/: __init__.py  client.py  occ.py  options.py  snapshots.py  stocks.py
src/magpie/mcp/: server.py
src/magpie/tracking/: __init__.py  journal.py  notes.py  pnl.py  positions.py  rules.py
tests/: conftest.py  test_feedback_loop.py  test_journal.py  test_llm_parsing.py  test_manage_positions.py  test_occ.py  test_payoff.py  test_positions_sync.py  test_regime.py  test_risk_checks.py  test_trading_rules.py
